<resources>
    <string name="app_name">MeiTuanDemo</string>


    <string name="mian_bottom_group_buy">团购</string>
    <string name="mian_bottom_merchant">商家</string>
    <string name="mian_bottom_meself">我的</string>
    <string name="mian_bottom_more">更多</string>
    <string name="_">美团</string>
    <string name="merchant_all">全部商家</string>
    <string name="merchant_sale">优惠商家</string>
    <string name="no_data">没有合适的数据显示</string>

    <!-- -->
    <string name="linearlayout_more">更多</string>
    <string name="linearlayout_more_app">精品应用</string>
    <string name="linearlayout_more_setting">设置</string>
    <string name="linearlayout_more_inform">其他</string>
    <string name="linearlayout_more_tallinfrom">消息提醒</string>
    <string name="linearlayout_more_nowifi">非wifi下使用省流量模式</string>
    <string name="linearlayout_more_share">分享设置</string>
    <string name="linearlayout_more_invite">邀请好友使用美团</string>
    <string name="linearlayout_more_textsize">字号大小</string>
    <string name="linearlayout_more_clearcache">清空缓存</string>
    <string name="linearlayout_more_richscan">扫一扫</string>
    <string name="linearlayout_more_feedback">意见反馈</string>
    <string name="linearlayout_more_help">支付帮助</string>
    <string name="linearlayout_more_updata">检查更新</string>
    <string name="linearlayout_more_about">关于美团</string>
    <string name="linearlayout_more_joinus">加入我们</string>
    <string name="linearlayout_more_diagnosing_network">诊断网络</string>
    <string name="linearlayout_more_text_size">中号字（默认）</string>

</resources>
