<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/backgroundcolor"
              android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlayout_more_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green" >

        <Button
            android:id="@+id/btn_more_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/linearlayout_more"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_city"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/linearlayout_more_app"
            android:textColor="#ffffff" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/tv_more_set"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:paddingLeft="5dp"
                android:text="@string/linearlayout_more_setting"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/green" >
            </View>

            <Button
                android:id="@+id/btn_messageremind"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/button_more"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:text="@string/linearlayout_more_tallinfrom"
                android:textColor="@color/textgray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>

            <LinearLayout
                android:id="@+id/llayout_picturemode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/selector_more"
                android:gravity="center_vertical"
                android:paddingLeft="10dp" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/linearlayout_more_nowifi"
                    android:textSize="16sp"
                    android:textColor="@color/textgray" />
                <!--android:src="@mipmap/bg_settings_drag_on"-->
                <ImageView
                    android:id="@+id/iv_picturemode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>

            <Button
                android:id="@+id/btn_shareset"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/button_more"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/linearlayout_more_share"
                android:textSize="16sp"
                android:textColor="@color/textgray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>

            <Button
                android:id="@+id/btn_invite_friends"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/button_more"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/linearlayout_more_invite"
                android:textSize="16sp"
                android:textColor="@color/textgray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>
            <LinearLayout
                android:id="@+id/llayout_adjust_textsize"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/selector_more"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/linearlayout_more_textsize"
                    android:textSize="16sp"
                    android:textColor="@color/textgray" />

                <TextView
                    android:id="@+id/tv_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/linearlayout_more_text_size"
                    android:textSize="16sp"
                    android:textColor="@color/textgray" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>

            <LinearLayout
                android:id="@+id/llayout_emptybuffer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/selector_more"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/linearlayout_more_clearcache"
                    android:textSize="16sp"
                    android:textColor="@color/textgray" />

                <TextView
                    android:id="@+id/tv_buffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="0 K"
                    android:textSize="16sp"
                    android:textColor="@color/textgray" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>


            <TextView
                android:paddingTop="10dp"
                android:id="@+id/btn_inform"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:paddingLeft="5dp"
                android:text="@string/linearlayout_more_inform"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/green" >
            </View>

            <Button
                android:id="@+id/btn_richscan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/button_more"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/linearlayout_more_richscan"
                android:textSize="16sp"
                android:textColor="@color/textgray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>
            <Button
                android:id="@+id/btn_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/button_more"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/linearlayout_more_feedback"
                android:textSize="16sp"
                android:textColor="@color/textgray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>

            <Button
                android:id="@+id/btn_payhelp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/button_more"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/linearlayout_more_help"
                android:textSize="16sp"
                android:textColor="@color/textgray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>

            <LinearLayout
                android:id="@+id/llayout_inspectupdate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/selector_more"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/linearlayout_more_updata"
                    android:textSize="16sp"
                    android:textColor="@color/textgray" />

                <TextView
                    android:id="@+id/tv_versions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="当前版本v4.1.1-b114"
                    android:textSize="16sp"
                    android:textColor="@color/textgray" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>

            <Button
                android:id="@+id/btn_meituan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/button_more"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/linearlayout_more_about"
                android:textSize="16sp"
                android:textColor="@color/textgray" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>

            <Button
                android:id="@+id/btn_joinus"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/button_more"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/linearlayout_more_joinus"
                android:textSize="16sp"
                android:textColor="@color/textgray" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shallowgray" >
            </View>

            <Button
                android:id="@+id/btn_diagnosing_network"
                android:layout_width="match_parent"
                android:layout_height="@dimen/more_linespacing"
                android:layout_weight="1"
                android:background="@drawable/button_more"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/linearlayout_more_diagnosing_network"
                android:textSize="16sp"
                android:textColor="@color/textgray" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>